WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284458
UnifiedPDF: Page previews disappear when zoomed closely
https://bugs.webkit.org/show_bug.cgi?id=284458
Summary
UnifiedPDF: Page previews disappear when zoomed closely
Kimmo Kinnunen
Reported
2024-12-11 06:16:21 PST
UnifiedPDF: Page previews disappear when zoomed closely
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-11 06:16:29 PST
<
rdar://problem/141280757
>
Kimmo Kinnunen
Comment 2
2024-12-11 06:26:43 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37772
EWS
Comment 3
2024-12-13 01:18:04 PST
Committed
287788@main
(2b42362df028): <
https://commits.webkit.org/287788@main
> Reviewed commits have been landed. Closing PR #37772 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug